# ai-social-manager

./: .dockerignore  .gitignore  Dockerfile  README.md  build.sh  render.yaml
docs/: competitive-analysis.md  next-steps.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  index.css  main.jsx  store.js
frontend/src/components/: BrandForm.jsx  Layout.jsx  MarkdownText.jsx  OAuthButtons.jsx  PipelineStatus.jsx  PlatformBadge.jsx  PostCard.jsx  ProtectedRoute.jsx  ScoreRing.jsx  Sidebar.jsx  StepCompose.jsx  StepIndicator.jsx  StepResults.jsx  StepSelectBrand.jsx
frontend/src/components/onboarding/: CompletionToast.jsx  OnboardingOverlay.jsx  OnboardingProvider.jsx  OnboardingTooltip.jsx  ResumePill.jsx  WelcomeModal.jsx  onboardingSteps.js  useOnboarding.js  useSpotlight.js
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: BrandSettings.jsx  Dashboard.jsx  Generate.jsx  History.jsx  Login.jsx  Register.jsx  Settings.jsx
langgraph-api/: .env.example  pyproject.toml
langgraph-api/app/: auth.py  circuit_breaker.py  database.py  encryption.py  llm_factory.py  main.py  models.py  prompts.py  response_parser.py  schemas.py  tools.py
langgraph-api/app/agents/: critic.py  strategist.py  trend_researcher.py  writer.py
langgraph-api/app/graph/: builder.py  state.py
langgraph-api/app/routers/: auth.py  brands.py  history.py  settings.py
langgraph-api/tests/: test_circuit_breaker.py  test_idempotency.py  test_tools.py
